[BUG FIX]: 1、修复ios下如果设置overflow:scroll时会出现卡顿现象，增加硬件加速属性： -webkit-overflow-scrolling: touch; 		2、下拉刷新修改。

--- a/src/styles/modules/content.scss
+++ b/src/styles/modules/content.scss
@@ -1,6 +1,7 @@
 .content{
 	flex: 1;
 	background: $body-bg;
-	overflow: scroll;
+	overflow: auto;
 	position: relative;
+    -webkit-overflow-scrolling: touch;
 }
